@@ -17,23 +17,27 @@ DIST NVIDIA-FreeBSD-x86-180.60.tar.gz 18594717 RMD160 f295b96305327c1d125709f35b
 DIST NVIDIA-FreeBSD-x86-185.18.04.tar.gz 19185492 RMD160 5e3e2504c82a060e33534fa18263ff2230f5b6d1 SHA1 4c41b95a8d84cd96a58f5fc51fac433f09a8c2eb SHA256 b84e769c7ff06478d1989c88475792284388c8e0ed78de31af7f0b0f32a3dc4c
 DIST NVIDIA-FreeBSD-x86-185.18.08.tar.gz 19190441 RMD160 e9ad6dcc5874517c3c929cd40e05d6e21cd03b5e SHA1 3c79a5e252380105e3c044059fd983dfdbb27560 SHA256 9f9ee6b0e680a3d6f863d0cc5952194b89656d05941944d2df3c0796d049f6da
 DIST NVIDIA-FreeBSD-x86-185.18.10.tar.gz 19196858 RMD160 ac2fe66f332be7f01054568ea1eaf068f6b00afa SHA1 c0856f53312bded5d10d7983a32b2a0382b27399 SHA256 3ad0d692fc0258517c58527c9e1ab37a8d9fadc273d49323b3850aeeb23a12e5
+DIST NVIDIA-FreeBSD-x86-185.18.14.tar.gz 19221783 RMD160 6865a8a4c7e24f671cac52d45999b657e950e86f SHA1 a7c87d70fc537dbabed6a0098dd57f7de4d3027d SHA256 d81b392505478d83e23f7b23cc2f2b4c808896bad9317417fa69c405b76db956
 DIST NVIDIA-FreeBSD-x86-185.19.tar.gz 19866641 RMD160 03c84d542f592efb20d2f27e4d3a71e4e1f92f69 SHA1 95a7cc48dce788b3e07323bbe85d651897ecbb4f SHA256 a4ab9f6598789e81574a61a05ff4f12e27c832dcec3f815d87eb07a937b085ab
 DIST NVIDIA-Linux-x86-180.53-pkg0.run 13573257 RMD160 6fc1e0f44c269e68cd19959cd73f1560cb9f57bd SHA1 5b0852ac352ea9edbc067804188b83ca4961b17f SHA256 385b17ba2d0e3ebab37bda76fda4c5b8b92ec7b9a9024ffbda5bd03d83965d0d
 DIST NVIDIA-Linux-x86-180.60-pkg0.run 13574190 RMD160 fd43b3a3bdd05b292b6f8f363c45b3ae677f5ad0 SHA1 d9a68f1536edb4f276634acd8ec2377ea252de69 SHA256 42706637c02dfe2aad5df69f5cc2b3ce0ad13021c6a9b49e42c6e5052eaa7d89
 DIST NVIDIA-Linux-x86-185.18.04-pkg0.run 14092597 RMD160 54c92315a57174a251357af42b856ec08878cc29 SHA1 a3934f0f269b97073a9182f2812e799a05509052 SHA256 fc49fbb40c8ab53cf58c1eb52e44ae0ae55316cdd7e4421f1a81e1ce3feb1d62
 DIST NVIDIA-Linux-x86-185.18.08-pkg0.run 14096920 RMD160 0ce540de2aaedd7f7d6c772d46cea636a61846ff SHA1 744819a07882a2f31b22c353711fa12d267a89de SHA256 c737752674337854c77970ee4dada61e96501c2ca15c252b47d8bbbdc8aa9daa
 DIST NVIDIA-Linux-x86-185.18.10-pkg0.run 14101763 RMD160 751b831da5b5e8a73564e72677fc274ad39c1016 SHA1 2962bc2735d8d6976f090b25b4ba45494dbdbb2e SHA256 555d63d2dd87fd84a3509d2b2bb5dc18ebe7374567c36e94119ba642f829cb2c
+DIST NVIDIA-Linux-x86-185.18.14-pkg0.run 14125083 RMD160 27b07a055ed85d6da0010725013c2be3331d8634 SHA1 0bdf22ecb9e50d0a4272c91c1f53bcebcc736a1c SHA256 c569da0d06067a3dffacb193f1b7c4d19c8440e4f9370a62d63ba29cc438f760
 DIST NVIDIA-Linux-x86-185.19-pkg0.run 14771781 RMD160 1ad80cff76f52c71f5b16751f61717a59a93756c SHA1 837bdfdf9d0cedeb23256439713a0cbfd9189087 SHA256 f79615ea4afd6ee4471389e5e76d58fc1df72f56d6d2009f3c245cfba053c61c
 DIST NVIDIA-Linux-x86_64-180.53-pkg2.run 21477159 RMD160 5c605898e1a9362c1d6b9bcaff134eb39a7a37e7 SHA1 c830879c53c07fcfa1c8e4b20ef822b57be69904 SHA256 b40289f81e9469fa1cf2d60104e2980b947b5c23d33e4796d0f05d417fa6d419
 DIST NVIDIA-Linux-x86_64-180.60-pkg2.run 21479961 RMD160 150d7841814b58b7e1f570264ef7a3b06df7ad84 SHA1 606b6a9b1cd9fae7d3e3cd11de64b8c6f97b4518 SHA256 69eee4532031cb4107ea5d67743e8a210f83e2e3aa688d50c7f2f0bc8cc95933
 DIST NVIDIA-Linux-x86_64-185.18.04-pkg2.run 22168047 RMD160 0f428d3290d8673ea1f745564004bb03adb75581 SHA1 0e695d7ce87232111e9da95c992691b1276f95ad SHA256 ef9f38b60402144fcfb63b147c3b8b77ef5d1cbbb4ed8f0708b9fa2c480cd06b
 DIST NVIDIA-Linux-x86_64-185.18.08-pkg2.run 22179613 RMD160 16c8d7a55e5a2b672d2514e52957da1ffde1be36 SHA1 b3b5e6b0e9f1425799abc7ecb6769cca2e42697b SHA256 85e87ba4554cbf1f63c90a4cea0851b43d618a3b9a4372e40078acf049b9bb56
 DIST NVIDIA-Linux-x86_64-185.18.10-pkg2.run 22190194 RMD160 9d443270a323e8c63fc66219d1d1a75efa453c39 SHA1 f4af77b304e295087658e5f9e6ae7afbd3e2ca8c SHA256 9fb93d78f84081765b145e2c1b046c23ef2fe8fa1c66abd66d8b93a2f6a30126
+DIST NVIDIA-Linux-x86_64-185.18.14-pkg2.run 22211696 RMD160 c304d60350f6961a883b5cc860dd2baa821b21fc SHA1 7b7c41028247070c24f5088a028f07fe910e4023 SHA256 44dd422544a3ac512769be27d9999a1a8b73bac6197dedc18bc0bc764049a198
 DIST NVIDIA-Linux-x86_64-185.19-pkg2.run 23458043 RMD160 e5951bf0001b0897806e820f63c54769297bf67b SHA1 523813449acb6fa91c46b62b15a5d3a2fb9bcd56 SHA256 43cca8302cb23cda259ad0befd559d986803be27dad2b4df43777d1f0eb4fac3
 EBUILD nvidia-drivers-180.53.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-180.60.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.18.04.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.18.08.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.18.10.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
+EBUILD nvidia-drivers-185.18.14.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.19.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
-MISC ChangeLog 2112 RMD160 dc3aa1ce8ce2f487e633a0d0b67439f88036b0f0 SHA1 f88c50908c2b901434502bcb41e981d94f2e7504 SHA256 cd9d5b5299127b65d53768556cf075e52b7c31ccbe7091203455f3f277357540
+MISC ChangeLog 2273 RMD160 9e6d4ee1a9fd71ae46615609bcb2d832051438d3 SHA1 fcbce25ec60a793ea89047677134dee96197145c SHA256 b6213dd40801a32513f7ae4031a92a6766131540c36d251c62605915e060edcf
